# rust-bitcoincore-rpc

client/: Cargo.toml
client/src/: client.rs
contrib/: test.sh
integration_test/: Cargo.toml
integration_test/src/: main.rs
json/: Cargo.toml
json/src/: lib.rs
